Updated protocol and 1-3-requirements

--- a/tex/1-3-requirements.tex
+++ b/tex/1-3-requirements.tex
@@ -18,25 +18,14 @@
 
 \section{Требования к методу анализа}
 
-В основные требования к методу анализа входит:
+В требования к методу анализа входит:
 \begin{enumerate}[1)]
     \item возможность обнаружения межъязыковых зависимостей (в рамках фрагмента кода),
-    \item использование выходного представления данных анализа, отражающего ключевые концепции
-    языков программирования,
-    \item обеспечение корректности анализа в отношении семантики исходных языков,
-    \item возможность предоставления наиболее полных результатов анализа в рамках
-    избранного выходного представления,
+    \item независимость в отношении анализируемых языков и технологий,
+    \item возможность гибкой настройки объемов анализа,
+    \item использование семантического представления с формально доказанными свойствами,
     \item ориентированность на основные сценарии использования средств
-    поддержки разработчика.
+    поддержки разработчика. 
 \end{enumerate}
-
-В обеспечивающие требования к методу анализа входит:
-\begin{enumerate}[1)]
-    \item использование общепринятого формата данных для передачи результатов анализа,
-    \item гибкость в отношении количества анализаторов и количества анализируемой информации,
-    \item минимизация ложноположительных результатов анализа,
-    \item возможность обеспечения быстрого отклика использующих метод средств.
-\end{enumerate}
-
 
 \clearpage
