--- a/tex/12-intro.tex
+++ b/tex/12-intro.tex
@@ -1,12 +1,56 @@
 \Introduction
 
-Целью работы является создание всякой всячины. Для достижения поставленной цели необходимо решить следующие задачи:
+Особенностью современной индустрии разработки программного обеспечения является применение нескольких языков программирования в
+одном программном проекте. Данная особенность порождает проблему проверки согласованности фрагментов кода, реализованных на разных языках и
+применяемых в составе одной программной системы. Как правило, такая несогласованность отслеживается только на этапе отладки или тестирования.
 
-\begin{itemize}
-\item проанализировать существующую всячину;
-\item спроектировать свою, новую всячину;
-\item изготовить всякую всячину;
-\item проверить её работоспособность.
-\end{itemize}
+Одним из вариантов решения данной проблемы может стать проведение статического семантического анализа кода
+с выявлением несогласованности в таком коде автоматически. Для решения такого рода задач существуют различные
+инструментальные средства и часто такие средства встраиваются в среду разработки для
+поддержки разработчика в реальном времени.
+
+Однако, на данный момент методы проведения статического анализа мультиязыкового
+кода развиты слабо. Большая часть методов ориентирована на специфические языки или проекты
+и плохо подходит для интеграции в инструментальные средства в общем случае.
+Вследствие этого мультиязыковые средства поддержки разработчика слабо развиты
+и обычно ограничены кругом узкоспециализированных проприетарных решений.
+
+Метод мультиязыкового анализа, позволяющий гибко анализировать
+фрагменты кода на разных языках и независимый относительно анализируемых
+технологий является одним из решений данной проблемы.
+
+\textbf{Актуальность темы исследования} обусловлена малым развитием
+инструментальных средств поддержки разработчика, ориентированных на мультиязыковой анализ.
+Такое положение вещей снижает продуктивность разработчиков и увеличивает время, отводимое
+на процессы кодирования и отладки.
+
+\textbf{Объектом исследования} являются исходные тексты и семантические модели
+программ, написанных с использованием нескольких языков
+программирования.
+
+\textbf{Предметом исследования} являются методы и алгоритмы анализа исходных
+текстов программ, ориентированных на мультиязыковой статический анализ.
+
+\textbf{Целью работы} является упрощение процессов разработки ПО, путем создания метода выявления межъязыковых связей,
+позволяющего обеспечивать корректность и расширяемость соответствующих средств.
+
+Для достижения данной цели необходимо решить следующие \textbf{задачи}:
+\begin{enumerate}[1)]
+    \item изучить предметную область, а именно индустрию разработки ПО,
+    \item провести исследование текущих решений в области межъязыкового анализа,
+    \item разработать требования к методу и спроектировать его архитектуру,
+    \item описать прикладные сценарии использования метода и соответствующего анализатора,
+    \item создать первичную реализацию анализатора, поддерживающего определенный набор языков,
+    \item провести оценку показателей анализатора на избранных тестовых проектах.
+\end{enumerate}
+
+\textbf{Научная новизна} работы заключается в создании метода анализа, позволяющего
+разрабатывать различные инструментальные средства, направленные
+на поддержку разработчика в процессе кодирования и отладки. При этом, такой метод позволит
+обеспечить корректность семантического анализа на межъязыковом уровне.
+
+\textbf{Практическая значимость} работы выражается в создании прототипа мультиязыкового
+анализатора, обеспечивающего поддержку реализации сценариев LSP, что позволяет
+создавать <<мультиязыковые>> серверы LSP.
 
 \Define{Семантика}{смысловое содержание синтаксических конструкций программ}
