--- a/tex/2-1-tooling.tex
+++ b/tex/2-1-tooling.tex
@@ -50,7 +50,7 @@
 Анализ зависимостей является важным процессом для обеспечения поддержки ПО. Рассматриваемый
 метод анализа является в сущности способом построить граф объявлений и ссылок (или def-use граф), поэтому
 для данного сценария использования он подходит очень хорошо. В сущности, метод позволяет обеспечивать
-\textit{мультиязыковой} анализ зависимостей, что может быть полезно в инструментах линтинга или
+\textit{межъязыковой} анализ зависимостей, что может быть полезно в инструментах линтинга или
 сбора статистики.
 
 Таким образом, хоть поддержка различных инструментальных средств в контексте мультязыкового анализа и
