Added conclusion and fixed some gost

--- a/tex/1-4-crosslingual-analysis.tex
+++ b/tex/1-4-crosslingual-analysis.tex
@@ -162,7 +162,7 @@ INI.
 или компиляции. Также такая трансляция происходит независимо от остальных трансляторов, что
 позволяет проводить анализ проектов инкрементально и по требованию.
 
-\subsection{Унифицированное представление через ограничения}
+\subsection{Унифицированное представление через ограничения} \label{ssec:constraints-desc}
 
 В ходе работы над проектом были реализованы несколько представлений, способных быть достаточно универсальными
 и при этом распределенными. Были рассмотрены такие структуры как семантическая сеть и дерево модулей, однако
@@ -232,79 +232,94 @@ INI.
 данный граф имеет более простую организацию и не вовлекает отношение подтипирования. Помимо ограничений, собираемых
 в ходе построения графа областей и анализа типов идентификаторов решено было ввести дополнительные виды ограничений,
 позволяющих обеспечивать проверку дальнейшую корректности связей в проекте. Ниже перечислены все задействованные
-в методе анализа виды ограничений.
-% TODO: сделать по госту
-\begin{description} \label{constraints-desc}
-    \item[Объявление\slash Ссылка] \
-        \\
-        \textbf{Вид:} ограничение графа областей; \\
-        \textbf{Вовлекаемые узлы:} область видимости в которой упомянут идентификатор, идентификатор; \\
-        \textbf{Назначение:} связывание идентификатора и области видимости,
-    \item[Прямое ребро] \
-        \\
-        \textbf{Вид:} ограничение графа областей; \\
-        \textbf{Вовлекаемые узлы:} две области видимости, наименование ребра; \\
-        \textbf{Назначение:} обозначение прямой связи
-        между областями, моделирование лексических областей видимости,
-    \item[Ассоциация] \
-        \\
-        \textbf{Вид:} ограничение графа областей; \\
-        \textbf{Вовлекаемые узлы:} идентификатор или переменная, область видимости; \\
-        \textbf{Назначение:} <<именование>> определенной
-        области видимости, либо указание того что данный идентификатор имеет привязанную область видимости,
-    \item[Разрешение] \
-        \\
-        \textbf{Вид:} ограничение графа областей; \\
-        \textbf{Вовлекаемые узлы:} идентификатор, идентификатор или переменная; \\
-        \textbf{Назначение:} указание того что
-        данный идентификатор должен быть разрешен либо в указанный идентификатор, либо в подстановку переменной, 
-    \item[Уникальность] \
-        \\
-        \textbf{Вид:} ограничение графа областей; \\
-        \textbf{Вовлекаемые узлы:} коллекция имен; \\
-        \textbf{Назначение:} указание что коллекция имен не содержит дубликатов
-        в рамках данной области видимости, 
-    \item[Подмножество] \
-        \\
-        \textbf{Вид:} ограничение графа областей; \\
-        \textbf{Вовлекаемые узлы:} две коллекции имен; \\
-        \textbf{Назначение:} указание того, что одна коллекция
-        имен входит в другую коллекцию имен, 
-    \item[Аннотация типа] \
-        \\
-        \textbf{Вид:} типовое ограничение; \\
-        \textbf{Вовлекаемые узлы:} идентификатор, переменная; \\
-        \textbf{Назначение:} указание типа определенного
-        идентификатора через переменную, 
-    \item[Равенство типов] \
-        \\
-        \textbf{Вид:} типовое ограничение; \\
-        \textbf{Вовлекаемые узлы:} две переменные; \\
-        \textbf{Назначение:} обозначение равенства друх типовых 
-        переменный для их последующей унификации, 
-    \item[Обязан разрешиться] \
-        \\
-        \textbf{Вид:} ограничение консистентности; \\
-        \textbf{Вовлекаемые узлы:} идентификатор, область видимости; \\
-        \textbf{Назначение:} наложение на ссылку ограничения, обязывающего дальнейшее
-        связывание с объявлением, 
-    \item[Необходимый] \
-        \\
-        \textbf{Вид:} ограничение консистентности; \\
-        \textbf{Вовлекаемые узлы:} идентификатор, область видимости; \\
-        \textbf{Назначение:} данное объявление должно иметь хотя бы одну ссылку, 
-    \item[Эксклюзивный] \
-        \\
-        \textbf{Вид:} ограничение консистентности; \\
-        \textbf{Вовлекаемые узлы:} идентификатор, область видимости; \\
-        \textbf{Назначение:} данное объявление должно иметь не более одной ссылки, 
-    \item[Знаковый] \
-        \\
-        \textbf{Вид:} ограничение консистентности; \\
-        \textbf{Вовлекаемые узлы:} идентификатор; \\
-        \textbf{Назначение:} данное объявление может встречаться только
-        в одном экземпляре во всем графе областей видимости, 
-\end{description}
+в методе анализа виды ограничений:
+
+\renewcommand{\labelenumi}{\arabic{enumi})}
+\renewcommand{\labelenumii}{\asbuk{enumii})}
+
+\begin{enumerate}
+    \item Объявление\slash Ссылка,
+        \begin{enumerate}
+        \item \textbf{Вид:} ограничение графа областей;
+        \item \textbf{Вовлекаемые узлы:} область видимости в которой упомянут идентификатор, идентификатор;
+        \item \textbf{Назначение:} связывание идентификатора и области видимости.
+        \end{enumerate}
+    \item Прямое ребро,
+    \begin{enumerate}
+        \item \textbf{Вид:} ограничение графа областей; 
+        \item \textbf{Вовлекаемые узлы:} две области видимости, наименование ребра;
+        \item \textbf{Назначение:} обозначение прямой связи
+        между областями, моделирование лексических областей видимости.
+    \end{enumerate}
+    \item Ассоциация,
+    \begin{enumerate}
+        \item \textbf{Вид:} ограничение графа областей;
+        \item \textbf{Вовлекаемые узлы:} идентификатор или переменная, область видимости;
+        \item \textbf{Назначение:} <<именование>> определенной
+        области видимости, либо указание того что данный идентификатор имеет привязанную область видимости.
+    \end{enumerate}
+    \item Разрешение,
+    \begin{enumerate}
+        \item \textbf{Вид:} ограничение графа областей;
+        \item \textbf{Вовлекаемые узлы:} идентификатор, идентификатор или переменная;
+        \item \textbf{Назначение:} указание того что
+        данный идентификатор должен быть разрешен либо в указанный идентификатор, либо в подстановку переменной.
+    \end{enumerate}
+    \item Уникальность,
+    \begin{enumerate}
+        \item \textbf{Вид:} ограничение графа областей;
+        \item \textbf{Вовлекаемые узлы:} коллекция имен;
+        \item \textbf{Назначение:} указание что коллекция имен не содержит дубликатов
+        в рамках данной области видимости.
+    \end{enumerate}
+    \item Подмножество,
+    \begin{enumerate}
+        \item \textbf{Вид:} ограничение графа областей;
+        \item \textbf{Вовлекаемые узлы:} две коллекции имен;
+        \item \textbf{Назначение:} указание того, что одна коллекция
+        имен входит в другую коллекцию имен.
+    \end{enumerate}
+    \item Аннотация типа,
+    \begin{enumerate}
+        \item \textbf{Вид:} типовое ограничение;
+        \item \textbf{Вовлекаемые узлы:} идентификатор, переменная;
+        \item \textbf{Назначение:} указание типа определенного
+        идентификатора через переменную.
+    \end{enumerate}
+    \item Равенство типов,
+    \begin{enumerate}
+        \item \textbf{Вид:} типовое ограничение;
+        \item \textbf{Вовлекаемые узлы:} две переменные;
+        \item \textbf{Назначение:} обозначение равенства друх типовых 
+        переменный для их последующей унификации.
+    \end{enumerate}
+    \item Обязан разрешиться,
+    \begin{enumerate}
+        \item \textbf{Вид:} ограничение консистентности;
+        \item \textbf{Вовлекаемые узлы:} идентификатор, область видимости;
+        \item \textbf{Назначение:} наложение на ссылку ограничения, обязывающего дальнейшее
+        связывание с объявлением.
+    \end{enumerate}
+    \item Необходимый,
+    \begin{enumerate}
+        \item \textbf{Вид:} ограничение консистентности;
+        \item \textbf{Вовлекаемые узлы:} идентификатор, область видимости;
+        \item \textbf{Назначение:} данное объявление должно иметь хотя бы одну ссылку.
+    \end{enumerate}
+    \item Эксклюзивный,
+    \begin{enumerate}
+        \item \textbf{Вид:} ограничение консистентности;
+        \item \textbf{Вовлекаемые узлы:} идентификатор, область видимости;
+        \item \textbf{Назначение:} данное объявление должно иметь не более одной ссылки.
+    \end{enumerate}
+    \item Знаковый,
+    \begin{enumerate}
+        \item \textbf{Вид:} ограничение консистентности;
+        \item \textbf{Вовлекаемые узлы:} идентификатор;
+        \item \textbf{Назначение:} данное объявление может встречаться только
+        в одном экземпляре во всем графе областей видимости.
+    \end{enumerate}
+\end{enumerate}
 
 Дополнительные виды ограничений консистентности (<<Обязан разрешиться>>, <<Необходимый>>, <<Эксклюзивный>>, <<Знаковый>>) не затрагивают
 оригинальный механизм разрешения имен в графе областей и являются простым расширением, позволяющим добавить
