--- a/tex/2-1-tooling.tex
+++ b/tex/2-1-tooling.tex
@@ -3,7 +3,7 @@
 
 \section{Интеграция в различные инструментальные средства}
 
-Анализатор, поставляющий информацию, описанную в \ref{constraints-desc} способен
+Анализатор, поставляющий информацию, описанную в \ref{ssec:constraints-desc} способен
 поддерживать большое количество разнообразных инструментальных средств. Соответствующие
 возможности анализатора отражены в таблице \ref{analysis-tooling}.
 
