--- a/tex/80-conclusion.tex
+++ b/tex/80-conclusion.tex
@@ -1,6 +1,20 @@
 \Conclusion % заключение к отчёту
 
-В результате проделанной работы стало ясно, что ничего не ясно...
+В ходе данной работы было проведено исследование существующих методов мультязыкового анализа,
+выявлены их достоинства и недостатки. Проанализированы существующие инструменты поддержки разработчика,
+поддерживающие анализ множества языков и их связей.
+
+Был разработан метод мультиязыкового статического анализа, позволяющий
+обеспечить инструментальные средства поддержки разработчика. Данный метод отвечает требованиям
+к гибкости и языконезависимости, а также к корректности семантических свойств используемого представления.
+
+Также, для подтверждения работоспособности данного метода был разработан мультиязыковой анализатор
+и адаптер избранного инструментального средства (сервера LSP). В ходе разработки были созданы
+протокол и онтология, вместе позволяющие обеспечивать согласованность мультиязыковых фрагментов
+кода. Была произведена тестовая интеграция сервера LSP в IDE Visual Studio Code с демонстрацией определенных
+сценариев использования LSP.
+
+Задачи выпускной квалификационной работы выполнены в полном объеме, поставленная цель достигнута.
 
 %%% Local Variables: 
 %%% mode: latex
