Added some fixes

--- a/tex/1-1-scope.tex
+++ b/tex/1-1-scope.tex
@@ -114,10 +114,10 @@
 Поэтому стоит рассмотреть особенности мультиязыкового анализа которые затрудняют разработку соответствующих
 анализаторов и процесс анализа в целом.
 
-\subsection{Сложности распознавания текста} \label{ssec:parsing-problem}
+\subsection{Сложности синтаксического анализа мультиязыковых фрагментов кода} \label{ssec:parsing-problem}
 
 Так как вовлекаемые фрагменты кода написаны на разных языках, проблема анализа таких фрагментов
-возникает уже на самом первом этапе -- этапе распознавания текста. Обычно процесс анализа
+возникает уже на самом первом этапе -- этапе синтаксического анализа текста. Обычно, процесс анализа
 текста с определенной грамматикой не вызывает труда так как грамматика фиксирована и анализатор строится
 стандартными средствами -- парсер генераторы, рекурсивный спуск и иные. 
 
