--- a/tex/12-intro.tex
+++ b/tex/12-intro.tex
@@ -1,51 +1,47 @@
 \Introduction
 
-Особенностью современной индустрии разработки программного обеспечения является применение нескольких языков программирования в
+Особенностью современной индустрии разработки программного обеспечения является использование нескольких языков программирования в
 одном программном проекте. Данная особенность порождает проблему проверки согласованности фрагментов кода, реализованных на разных языках и
 применяемых в составе одной программной системы. Как правило, такая несогласованность отслеживается только на этапе отладки или тестирования.
 
-Одним из вариантов решения данной проблемы может стать проведение статического семантического анализа кода
-с выявлением несогласованности в таком коде автоматически. Для решения такого рода задач существуют различные
+Одним из вариантов решения данной проблемы может стать статический анализ исходного кода, нацеленный на выявление несогласованности между фрагментами, написанных на разных языках программирования. Для решения такого рода задач существуют различные
 инструментальные средства и часто такие средства встраиваются в среду разработки для
-поддержки разработчика в реальном времени.
+поддержки разработчика в процессе кодирования времени.
 
 Однако, на данный момент методы проведения статического анализа мультиязыкового
 кода развиты слабо. Большая часть методов ориентирована на специфические языки или проекты
-и плохо подходит для интеграции в инструментальные средства в общем случае.
-Вследствие этого мультиязыковые средства поддержки разработчика слабо развиты
-и обычно ограничены кругом узкоспециализированных проприетарных решений.
+и плохо подходит для интеграции в инструментальные средства в общем случае, также существующие подходы к мультиязыковому анализу не всегда позволяют выявить ошибки.
+Реализация средств анализа мультиязыкового кода как правило выполнена в составе узкоспециализированных проприетарных решений.
 
 Метод мультиязыкового анализа, позволяющий гибко анализировать
-фрагменты кода на разных языках и независимый относительно анализируемых
-технологий является одним из решений данной проблемы.
+фрагменты кода на разных языках является одним из решений данной проблемы.
 
-\textbf{Актуальность темы исследования} обусловлена малым развитием
+\textbf{Актуальность темы исследования} обусловлена слабым развитием
 инструментальных средств поддержки разработчика, ориентированных на мультиязыковой анализ.
 Такое положение вещей снижает продуктивность разработчиков и увеличивает время, отводимое
 на процессы кодирования и отладки.
 
 \textbf{Объектом исследования} являются исходные тексты и семантические модели
-программ, написанных с использованием нескольких языков
+программ, написанные с использованием нескольких языков
 программирования.
 
 \textbf{Предметом исследования} являются методы и алгоритмы анализа исходных
 текстов программ, ориентированных на мультиязыковой статический анализ.
 
-\textbf{Целью работы} является упрощение процессов разработки ПО, путем создания метода выявления межъязыковых связей,
+\textbf{Целью работы} является упрощение процессов разработки программного обеспечения, путем создания метода выявления межъязыковых связей,
 позволяющего обеспечивать корректность и расширяемость соответствующих средств.
 
 Для достижения данной цели необходимо решить следующие \textbf{задачи}:
 \begin{enumerate}[1)]
     \item изучить предметную область, а именно индустрию разработки ПО,
-    \item провести исследование текущих решений в области межъязыкового анализа,
-    \item разработать требования к методу и спроектировать его архитектуру,
+    \item провести исследование существующих решений в области межъязыкового анализа,
+    \item разработать требования к реализации и её программную архитектуру,
     \item описать прикладные сценарии использования метода и соответствующего анализатора,
-    \item создать первичную реализацию анализатора, поддерживающего определенный набор языков,
-    \item провести оценку показателей анализатора на избранных тестовых проектах.
+    \item создать прототип анализатора, поддерживающего определенный набор языков,
+    \item выполнить оценку показателей анализатора на избранных тестовых проектах.
 \end{enumerate}
 
-\textbf{Научная новизна} работы заключается в создании метода анализа, позволяющего
-разрабатывать различные инструментальные средства, направленные
+\textbf{Научная новизна} работы заключается в создании метода анализа, являющемся основой для разработки инструментальных средств программирования, направленных
 на поддержку разработчика в процессе кодирования и отладки. При этом, такой метод позволит
 обеспечить корректность семантического анализа на межъязыковом уровне.
 
