--- a/tex/listings.inc.tex
+++ b/tex/listings.inc.tex
@@ -1,6 +1,7 @@
 % 8 Листинги
 
 \usepackage{listings}
+\usepackage{float}
 
 % Значения по умолчанию
 \lstset{
@@ -8,7 +9,7 @@
   breakatwhitespace=true,% разрыв строк только на whitespacce
   breaklines=true,       % переносить длинные строки
 %   captionpos=b,          % подписи снизу -- вроде не надо
-  inputencoding=koi8-r,
+  inputencoding=utf-8,
   numbers=left,          % нумерация слева
   numberstyle=\footnotesize,
   showspaces=false,      % показывать пробелы подчеркиваниями -- идиотизм 70-х годов
