--- a/tex/rpz.tex
+++ b/tex/rpz.tex
@@ -7,14 +7,14 @@
 \include{preamble.inc}
 
 % Настройки листингов.
-\ifPDFTeX
+%\ifPDFTeX
 \include{listings.inc}
-\else
+%\else
 \usepackage{local-minted}
-\fi
+%\fi
 
 % Полезные макросы листингов.
-\include{macros.inc}
+%\include{macros.inc}
 
 % Стиль титульного листа и заголовки
 %\include{00-title}
